infra/k8s/glpi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi
  namespace: glpi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - support.wafizo.fr
      secretName: support-wafizo-fr-tls
  rules:
    - host: support.wafizo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glpi
                port:
                  number: 80
